--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </div>
         <div class="single-box">
           <div class="num">
+            <div class="card">
+              <div class="face front"></div>
+              <div class="face back"></div>
+            </div>
             <div class="top"></div>
             <div class="bot"></div>
             <p id="hours">23</p>
@@ -58,6 +62,10 @@
         </div>
         <div class="single-box">
           <div class="num">
+            <div class="card">
+              <div class="face front"></div>
+              <div class="face back"></div>
+            </div>
             <div class="top"></div>
             <div class="bot"></div>
             <p id="minutes">55</p>
@@ -67,7 +75,11 @@
           </p>
         </div>
         <div class="single-box">
-          <div class="num">
+          <div class="num change">
+            <div class="card">
+              <div class="face front"></div>
+              <div class="face back"></div>
+            </div>
             <div class="top"></div>
             <div class="bot"></div>
             <p id="seconds">41</p>
